--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "myUnited",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "3.4.1",
-    "ejs": "*",
-    "mongoskin": "*",
-    "request": "*",
-    "connect-flash": "*",
-    "i18n": "0.4.1",
-    "moment": "~2.5.1"
-  }
+	"name": "ManUnited7",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node app.js"
+	},
+	"dependencies": {
+		"express": "3.4.1",
+		"ejs": "*",
+		"mongoskin": "*",
+		"request": "*",
+		"connect-flash": "*",
+		"i18n": "0.4.1",
+		"moment": "~2.5.1",
+		"wechat": "~0.6.5"
+	}
 }
